--- a/src/pages/wallet.css
+++ b/src/pages/wallet.css
@@ -1,14 +1,46 @@
-*{
-  background-color: rgb(75, 78, 75)
+* {
+  background-color: rgb(75, 78, 75);
 }
-hr{
-  border-color: #7bac3b; 
- }
- .container-gastos{
-   display: flex;   
-   justify-content: space-around;
-   align-items: center;
- }
- .user{
-  font-family: 'Style Script', cursive;
- }
+hr {
+  border-color: #7bac3b;
+  /* font-weight: bold; */
+  position: relative;
+  animation: mymove 6s;
+  animation-timing-function: ease;
+}
+
+@keyframes mymove {
+  from {left: 100%;}
+  to {left: 0px;}
+} 
+.container-gastos {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.container-teste {
+  background-color: #1F1C14;
+  width: 100%;
+  height: 50px;
+  display:flex;
+  align-items: center;
+}
+.test-form {
+  display: flex;
+  background-color:#1F1C14;
+}
+.label{
+  color:rgb(75, 78, 75);
+  background-color:#1F1C14
+}
+.test-input {
+  border: 1px solid rgb(75, 78, 75);
+  border-radius:5%;
+  color: white;
+  
+  background-color:#1F1C14;
+}
+
+.user {
+  font-family: "Style Script", cursive;
+}
