--- a/src/pages/wallet.css
+++ b/src/pages/wallet.css
@@ -15,32 +15,37 @@ hr {
 } 
 .container-gastos {
   display: flex;
+  flex-wrap: nowrap;
   justify-content: space-around;
   align-items: center;
 }
-.container-teste {
-  background-color: #1F1C14;
-  width: 100%;
-  height: 50px;
-  display:flex;
-  align-items: center;
+.container-teste { 
+ margin-top: 15px;
 }
-.test-form {
-  display: flex;
-  background-color:#1F1C14;
+.test-form{
+  display: flex;  
 }
 .label{
-  color:rgb(75, 78, 75);
-  background-color:#1F1C14
+  width: 25%;
 }
-.test-input {
-  border: 1px solid rgb(75, 78, 75);
-  border-radius:5%;
-  color: white;
-  
+.test-input{
+  margin-right: 15px;
+}
+/* .test-form {
+  display: flex;
   background-color:#1F1C14;
-}
+} */
+/* .label{
+  width: 120px;
+  color:#f7f7f7;
+  background-color:#1F1C14;
+} */
+/* .test-input {
+  width: 60px;
+  border: 1px solid #dae2da; 
+  color: white;
+} */
 
-.user {
+h4 {  
   font-family: "Style Script", cursive;
 }
